--- a/examples/flux-todomvc/package.json
+++ b/examples/flux-todomvc/package.json
@@ -8,7 +8,8 @@
     "flux": "^2.0.1",
     "keymirror": "~0.1.0",
     "object-assign": "^1.0.0",
-    "react": "^0.12.0"
+    "react": "^0.12.0",
+    "jquery": "^2.1.3"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
@@ -16,7 +17,8 @@
     "jest-cli": "~0.1.17",
     "reactify": "^0.15.2",
     "uglify-js": "~2.4.15",
-    "watchify": "^2.1.1"
+    "watchify": "^2.1.1",
+    "jquery": "^2.1.3"
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d .",
