--- a/examples/flux-todomvc/package.json
+++ b/examples/flux-todomvc/package.json
@@ -17,8 +17,7 @@
     "jest-cli": "~0.1.17",
     "reactify": "^0.15.2",
     "uglify-js": "~2.4.15",
-    "watchify": "^2.1.1",
-    "jquery": "^2.1.3"
+    "watchify": "^2.1.1"
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d .",
